Fixes toc alignment on search and adds highlight library

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -35,6 +35,10 @@ html, body {
   background-color: $main-bg;
 }
 
+.highlight {
+  background-color: #FFFF88;
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
 ////////////////////////////////////////////////////////////////////////////////
